{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 40,
  "lineage": "6b2814b4-79b7-d884-8c12-9637d1011174",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "forNat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fe3eff65ae74f023",
            "domain": "vpc",
            "id": "eipalloc-0ed5a9477a8a12df0",
            "network_interface": "eni-082fa101ed0a9e873",
            "private_dns": "ip-172-28-0-101.eu-west-1.compute.internal",
            "private_ip": "172.28.0.101",
            "public_dns": "ec2-54-72-94-181.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.94.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-9398d3e0",
            "arn": "arn:aws:ec2:eu-west-1:250373516626:instance/i-0e9c2bfd4bfe67ec0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9c2bfd4bfe67ec0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07aa3176e96045cdc",
            "private_dns": "ip-172-28-3-143.eu-west-1.compute.internal",
            "private_ip": "172.28.3.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f4a5ea252d069165",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c94e429ec866415d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3e1ec1692034f5d"
            ]
          },
          "dependencies": [
            "aws_security_group.Database",
            "aws_subnet.PrivateAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-9398d3e0",
            "arn": "arn:aws:ec2:eu-west-1:250373516626:instance/i-00eb1e78ded0770d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00eb1e78ded0770d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a913da7dbfdd5d5",
            "private_dns": "ip-172-28-0-250.eu-west-1.compute.internal",
            "private_ip": "172.28.0.250",
            "public_dns": "ec2-54-194-141-58.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.141.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06491edcd2be5df4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca1e5fa5a95ce64f",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e47a545d42440b30"
            ]
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_subnet.PublicAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bf1bf51ef626bab7",
            "owner_id": "250373516626",
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed5a9477a8a12df0",
            "id": "nat-0777f8c35b4b3e48f",
            "network_interface_id": "eni-082fa101ed0a9e873",
            "private_ip": "172.28.0.101",
            "public_ip": "54.72.94.181",
            "subnet_id": "subnet-0ca1e5fa5a95ce64f"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-06acd7ed00109c2dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "250373516626",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00c9d8447608fba00",
            "owner_id": "250373516626",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0777f8c35b4b3e48f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00757bf7b732561d8",
            "owner_id": "250373516626",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf1bf51ef626bab7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664ba3f0a579d057",
            "route_table_id": "rtb-00c9d8447608fba00",
            "subnet_id": "subnet-0c94e429ec866415d"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_route_table.private",
            "aws_subnet.PrivateAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db6379248f90ad40",
            "route_table_id": "rtb-00757bf7b732561d8",
            "subnet_id": "subnet-0ca1e5fa5a95ce64f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZA",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:250373516626:security-group/sg-0c3e1ec1692034f5d",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3e1ec1692034f5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e47a545d42440b30"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": null,
            "owner_id": "250373516626",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FrontEnd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:250373516626:security-group/sg-0e47a545d42440b30",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e47a545d42440b30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FrontEnd",
            "name_prefix": null,
            "owner_id": "250373516626",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:250373516626:subnet/subnet-0c94e429ec866415d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.28.3.0/24",
            "id": "subnet-0c94e429ec866415d",
            "map_public_ip_on_launch": false,
            "owner_id": "250373516626",
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:250373516626:subnet/subnet-0ca1e5fa5a95ce64f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.28.0.0/24",
            "id": "subnet-0ca1e5fa5a95ce64f",
            "map_public_ip_on_launch": false,
            "owner_id": "250373516626",
            "vpc_id": "vpc-09276e5f36a680256"
          },
          "dependencies": [
            "aws_vpc.terraformmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformmain",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:250373516626:vpc/vpc-09276e5f36a680256",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.28.0.0/16",
            "default_network_acl_id": "acl-0c0901f70c0b54888",
            "default_route_table_id": "rtb-05707f74776ecbbe7",
            "default_security_group_id": "sg-0fad860441a95c479",
            "dhcp_options_id": "dopt-04511ca9bd82f4a2c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09276e5f36a680256",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05707f74776ecbbe7",
            "owner_id": "250373516626"
          }
        }
      ]
    }
  ]
}